--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
@@ -11,12 +11,8 @@
 {% block content %}
 
   <div class="page__row">
-    <div class="page__section">
-      <h2 class="efa__search__title">
-        {% trans "Geld von der Pharmaindustrie" %}
-      </h2>
-
-      <p class="efa__search__lead">
+    <div class="page__section efa__content">
+      <p>
         {% trans "Die 54 größten Pharma-Unternehmen in Deutschland veröffentlichen im Jahr 2016 erstmals alle Geldzahlungen, die sie im vergangenen Jahr an Ärzte und Kliniken geleistet haben." %}
         <a href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">Zum Hintergrundartikel</a>
       </p>
@@ -75,12 +71,8 @@
   <div class="efa__content page__container">
 
     <div class="page__row">
-      <div class="page__section -wide">
-        <h2 class="efa__search__title">
-          {% trans "observational studies" %}
-        </h2>
-
-        <p class="efa__search__lead">
+      <div class="page__section -wide efa__content">
+        <p>
           {% trans "Pharmakonzerne bezahlen Ärzte dafür, dass sie beobachten, wie gut ihre Patienten ein bestimmtes Medikament vertragen. Wissenschaftlich sind diese „Anwendungsbeobachtungen“ wertlos. Doch Ärzte bekommen dafür im Schnitt 669 Euro – pro Patient. Diese Datenbank zeigt erstmals, welches Ausmaß die umstrittenen Studien erreicht haben – und welche Präparate vor allem in den Markt gedrückt werden." %}
           <a href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">Zum Hintergrundartikel</a>
         </p>
