Minor content updates to work around potential legal issues.

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/paymentrecipient_detail.html
@@ -41,7 +41,7 @@
 {% endblock %}
 
 {% block header_sidebar_about %}
-  <p>{% trans "Die 54 größten Pharma-Unternehmen in Deutschland veröffentlichen im Jahr 2016 erstmals alle Geldzahlungen, die sie im vergangenen Jahr an Ärzte und Kliniken geleistet haben." %}</p>
+  <p>{% trans "Die 54 größten Pharma-Unternehmen in Deutschland veröffentlichen im Jahr 2016 erstmals alle Geldzahlungen, die sie im vergangenen Jahr an Ärzte, Fachkreisangehörige und Kliniken geleistet haben." %}</p>
   <a class="efa__header__more-link" href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">Artikel lesen</a>
 {% endblock %}
 
@@ -52,7 +52,7 @@
   <div class="page__row">
     <div class="page__section -narrow">
       <p>
-        {% trans "Nur knapp 30 Prozent der Ärzte haben den Firmen ihr Einverständnis gegeben, dass ihre Vortrags- und Beratungshonorare, Tagungsgebühren und Reisespesen veröffentlicht werden dürfen." %}
+        {% trans "Nur knapp 30 Prozent der Ärzte und Fachkreisangehörigen haben den Firmen ihr Einverständnis gegeben, dass ihre Vortrags- und Beratungshonorare, Tagungsgebühren und Reisespesen veröffentlicht werden dürfen." %}
       </p>
       <p>
         {% trans "Die Zahlungen an Ärzte für Studien und Anwendungsbeobachtungen wollen die Pharmafirmen grundsätzlich nicht personenbezogen veröffentlichen." %}
