--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base.html
@@ -9,7 +9,7 @@
 {% block title %}{% blocktrans %}Database „Euros for Doctors“{% endblocktrans %}{% endblock %}
 
 {% block additional_meta %}
-<meta name="description" content="Wieviel Geld hat dein Arzt von der Pharmaindustrie erhalten? Zahlungen der Pharmaunternehmen an Ärzte und Fachangehörige des Geseundheitswesens.">
+<meta name="description" content="{% trans "How much money has your doctor received from the pharma industry? Payments from pharma companies to health care professionals." %}">
 {% endblock %}
 
 
