--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_recipients.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_recipients.html
@@ -6,9 +6,13 @@
 
 <section class="efa__search">
   <div class="page__container">
-    <form class="efa__search__form--small" action="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}" method="get">
-        <a class="efa__home-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
-          {% trans "Euros for Doctors" %}
+    <form class="efa__search__form--small -{{ country|lower }}" action="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}" method="get">
+        {% if country %}
+          <a class="efa__home-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-country_index' country=country|lower %}">
+        {% else %}
+          <a class="efa__home-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
+        {% endif %}
+          {{ project_title }}
         </a>
 
         <div class="efa__search__lead">
@@ -40,8 +44,9 @@
             <button class="btn btn-default" type="submit">{% trans "Search" %}</button>
           </span>
         </div>
-
-        {{ recipient_form.recipient_kind }}
+        {% blocktrans with kind=recipient_form.recipient_kind country=recipient_form.country %}
+          Search for {{ kind }} in {{ country }}
+        {% endblocktrans %}
 
     </form>
   </div>
