--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_barchart.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_barchart.html
@@ -4,15 +4,15 @@
 
 
 <dl class="efa__chart">
-  {% include "correctiv_eurosfueraerzte/_company_payment_barchart_item.html" with aggregated=payments.rnd_percent total=payments.rnd label="Studien und AWB" %}
+  {% include "correctiv_eurosfueraerzte/_company_payment_barchart_item.html" with aggregated=payments.rnd_percent total=payments.rnd label="Studien und AWB" currency=payments.currency %}
 </dl>
 
 <dl class="efa__chart">
-  {% include "correctiv_eurosfueraerzte/_company_payment_barchart_item.html" with aggregated=payments.hcp.total_aggregated_percent individual=payments.hcp.total_individual_percent total=payments.hcp.total label="Zahlungen an Ärzte" %}
+  {% include "correctiv_eurosfueraerzte/_company_payment_barchart_item.html" with aggregated=payments.hcp.total_aggregated_percent individual=payments.hcp.total_individual_percent total=payments.hcp.total label="Zahlungen an Ärzte" currency=payments.currency %}
 </dl>
 
 <dl class="efa__chart">
-  {% include "correctiv_eurosfueraerzte/_company_payment_barchart_item.html" with aggregated=payments.hco.total_aggregated_percent individual=payments.hco.total_individual_percent total=payments.hco.total label="Zahlungen an Organisationen" %}
+  {% include "correctiv_eurosfueraerzte/_company_payment_barchart_item.html" with aggregated=payments.hco.total_aggregated_percent individual=payments.hco.total_individual_percent total=payments.hco.total label="Zahlungen an Organisationen" currency=payments.currency %}
 </dl>
 
 <ul class="efa__chart__legend">
