Adjust copy and mark for translation

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_label.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_label.html
@@ -43,7 +43,7 @@
         <tr>
           <td>
             <span class="efa__detail-vis__value">
-              {% currency_format recipient.total_amount currency %}
+              {% currency_format recipient.total_amount currency decimal=0 %}
             </span>
           </td>
           <td>
