--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/base_detail.html
@@ -16,7 +16,7 @@
       <div class="efa__header__main">
         <div class="efa__header__content">
 
-          <a class="efa__home-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-index' country=country|lower %}">
+          <a class="efa__home-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-country_index' country=country|lower %}">
             {{ project_title }}
           </a>
 
