--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/index.html
@@ -70,8 +70,8 @@
     <div class="page__row">
       <div class="page__section -wide efa__content">
         <p>
-          {% trans "Pharmakonzerne bezahlen Ärzte dafür, dass sie beobachten, wie gut ihre Patienten ein bestimmtes Medikament vertragen. Wissenschaftlich sind diese „Anwendungsbeobachtungen“ wertlos. Doch Ärzte bekommen dafür im Schnitt 669 Euro – pro Patient. Diese Datenbank zeigt erstmals, welches Ausmaß die umstrittenen Studien erreicht haben – und welche Präparate vor allem in den Markt gedrückt werden." %}
-          <a href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">Zum Hintergrundartikel</a>
+          {% trans "Pharma companies pay doctors to observe how well patients tolerate certain drugs. These ”observational studies” are useless for science. But doctors receive 669 Euro on average – per patient. This database shows for the first time the scope of these studies – and which drugs are pushed the most." %}
+          <a href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">{% trans "Read this for more" %}</a>
         </p>
       </div>
     </div>
