--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
@@ -40,7 +40,7 @@
       {% blocktrans with name=object.name %}{{ name }} ist nicht Teil der Veröffentlichungs&shy;initiative.{% endblocktrans %}
     </p>
   {% endif %}
-  <a class="efa__header__more-link" href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">Artikel lesen</a>
+  {% include includes.article_link %}
 {% endblock %}
 
 {% block content %}
@@ -48,7 +48,10 @@
   <div class="page__row">
     <div class="page__section -narrow">
       <p>
-        Die Zahlungen an Ärzte für Tagungsgebühren, Reisekosten, Beratungs&shy;honorare und Spesen werden personenbezogen veröffentlicht – wenn der jeweilige Arzt zustimmt. Für den Rest wird die Summe zusammengefasst angegeben. Grundsätzlich nur zusammengefasst werden die Zahlungen im Rahmen von Studien und Anwendungsbeobachtungen (AWB) veröffentlicht.
+        {% blocktrans %}
+          The payments to health care professionals for conferences, travel, consulting and expenses are published with the name of the person – if the person agrees.
+          The sum of all other payments is reported. Payments concerning studies are only given in aggregated form.
+        {% endblocktrans %}
       </p>
 
       {% if payments %}
@@ -59,12 +62,14 @@
 
     <div class="page__sidebar">
       <div class="well">
-        <p>
-          Die Informationen auf dieser Seite stammen von den 54 Mitgliedsfirmen der „Freiwilligen Selbstkontrolle für die Arzneimittelindustrie e.V.“, die diese Angaben auf ihren jeweiligen Webseiten veröffentlicht haben.
-        </p>
+          {% include includes.recipient_sidebar %}
           {% if object.payments_url %}
           <p>
-            <a href="{{ object.payments_url }}">Veröffentlichung von „{{ object.name }}“</a>
+            <a href="{{ object.payments_url }}">
+              {% blocktrans with name=object.name %}
+                Publication of “{{ object.name }}”
+              {% endblock %}
+            </a>
           </p>
           {% endif %}
 
