--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_about_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/de/_about_blurb.html
@@ -1,4 +1,8 @@
 {% load i18n %}
 
-<p>{% trans "Die 54 größten Pharma-Unternehmen in Deutschland veröffentlichen im Jahr 2016 erstmals alle Geldzahlungen, die sie im vergangenen Jahr an Ärzte, Fachkreisangehörige und Kliniken geleistet haben." %}</p>
-<a class="efa__header__more-link" href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">Artikel lesen</a>
+<p>
+  {% trans "In 2016 the 54 biggest pharma companies in Germany published their payments to doctors and other health care professionals and organisations from the last year." %}
+</p>
+<a class="efa__header__more-link" href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">
+  {% trans "Read the article" %}
+</a>
