--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_recipient_main.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_recipient_main.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 <p>
-  {% trans "Nur knapp XY Prozent der Ärzte und Fachkreisangehörigen haben den Firmen ihr Einverständnis gegeben, dass ihre Vortrags- und Beratungshonorare, Tagungsgebühren und Reisespesen veröffentlicht werden dürfen." %}
+  {% trans "Only around 30 percent of doctors and health care professionals agreed to the publication of their fees and conference and travel expenses." context "CH" %}
 </p>
 <p>
-  {% trans "Die Zahlungen an Ärzte für Studien und Anwendungsbeobachtungen wollen die Pharmafirmen grundsätzlich nicht personenbezogen veröffentlichen." %}
+  {% trans "Detailed payments to doctors related to studies and non-interventional studies are not published by the pharma companies." context "CH" %}
 </p>
