--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_search_examples.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_search_examples.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
-<a href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q=4514&country=CH">4514</a>
+<a href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q=8001&country=CH">8001</a>
 {% trans "or" %}
 <a href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q=Zürich&country=CH">Zürich</a>
 {% trans "or" %}
-<a href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q=wiesnhuber&country=CH">Wiesnhuber</a>
+<a href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q=müller&country=CH">Müller</a>
