--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_recipient_sidebar.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/ch/_recipient_sidebar.html
@@ -1,4 +1,4 @@
 {% load i18n %}
 <p>
-  {% trans "The information on this page come from the XY member companies of Switzerland who published these payments on their websites." %}
+  {% trans "The information on this page come from the 59 pharma companies that signed the Pharma Cooperation Codex. This codex determine that the companies have to publish their payments on their websites." %}
 </p>
