--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_barchart.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_barchart.html
@@ -3,9 +3,11 @@
 {% load number_utils %}
 
 
+{% if payments.rnd %}
 <dl class="efa__chart">
   {% include "correctiv_eurosfueraerzte/_company_payment_barchart_item.html" with aggregated=payments.rnd_percent total=payments.rnd label="Studien und AWB" currency=payments.currency %}
 </dl>
+{% endif %}
 
 <dl class="efa__chart">
   {% include "correctiv_eurosfueraerzte/_company_payment_barchart_item.html" with aggregated=payments.hcp.total_aggregated_percent individual=payments.hcp.total_individual_percent total=payments.hcp.total label="Zahlungen an Ärzte" currency=payments.currency %}
@@ -15,6 +17,7 @@
   {% include "correctiv_eurosfueraerzte/_company_payment_barchart_item.html" with aggregated=payments.hco.total_aggregated_percent individual=payments.hco.total_individual_percent total=payments.hco.total label="Zahlungen an Organisationen" currency=payments.currency %}
 </dl>
 
+{% if has_aggregates %}
 <ul class="efa__chart__legend">
   <li class="efa__chart__legend-item--individual">
     {% blocktrans with percent=payments.total_individual_percent|floatformat:0 %}
@@ -27,3 +30,4 @@
     {% endblocktrans %}
   </li>
 </ul>
+{% endif %}
