Add hidden label to search tile search field

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/plugins/search_tile.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/plugins/search_tile.html
@@ -13,6 +13,8 @@
       {% trans "Has your doctor received money from the pharma industry?" %}
     </p>
 
+    <label class="sr-only" for="eurosfueraerzte-q">{% trans "Search" %}</label>
+
     <div class="input-group">
       <input id="eurosfueraerzte-q" name="q" type="text" class="form-control" placeholder="{% trans "Postcode, e.g. 45147" %}">
       <span class="input-group-btn">
