change english wording, add statistics

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/at/_about_blurb.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/at/_about_blurb.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <p>
-  {% trans "In 2016 the 54 biggest pharma companies in Germany published their payments to doctors and other health care professionals and organisations from the last year." context "AT" %}
+  {% trans "In 2016, pharma companies in Austria published information about their payments to doctors and other health care professionals and organisations from the last year." context "AT" %}
 </p>
 <a class="efa__header__more-link" href="/recherchen/euros-fuer-aerzte/artikel/2016/07/14/seid-umschlungen-millionen/">
   {% trans "Read the article" %}
