--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/at/_search_examples.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/at/_search_examples.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
-<a href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q=45147&amp;country=AT">45147</a>
+<a href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q=akh+wien&amp;country=AT">AKH Wien</a>
 {% trans "or" %}
-<a href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q=Dinslaken&amp;country=AT">Dinslaken</a>
+<a href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q=Horn&amp;country=AT">Horn</a>
 {% trans "or" %}
-<a href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q=müller&amp;country=AT">Müller</a>
+<a href="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}?q=bauer&amp;country=AT">Bauer</a>
