Add full name to title of link when truncating

--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_label.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_company_payment_label.html
@@ -47,7 +47,7 @@
             </span>
           </td>
           <td>
-            <a class="efa__detail-vis__name" href="{{ recipient.get_absolute_url }}">
+            <a class="efa__detail-vis__name" href="{{ recipient.get_absolute_url }}" title="{{ recipient.get_full_name }}">
               {{ recipient.get_full_name|truncatechars:20 }}
             </a>
           </td>
