--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/pharmacompany_detail.html
@@ -33,7 +33,7 @@
 {% block header_sidebar_about %}
   {% if payments %}
     <p>
-      {% blocktrans with name=object.name %}Gesamtsumme, die die {{ name }} im vergangenen Jahr an Ärzte und Einrichtungen gezahlt hat.{% endblocktrans %}
+      {% blocktrans with name=object.name %}Total amount that {{ name }} paid to doctors and organisations in the last year.{% endblocktrans %}
     </p>
   {% else %}
     <p>
