--- a/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_recipient_search.html
+++ b/correctiv_eurosfueraerzte/templates/correctiv_eurosfueraerzte/_recipient_search.html
@@ -3,41 +3,36 @@
 <section class="efa__search">
   <div class="page__container">
     <form id="search" class="efa__search__form -{{ country|lower }}" action="{% url 'eurosfueraerzte:eurosfueraerzte-recipientsearch' %}" method="get">
-        {% if country %}
-          <a class="efa__home-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-country_index' country=country|lower %}">
+
+      {% include "correctiv_eurosfueraerzte/_home_links.html" %}
+
+      <h1 class="efa__search__title">
+        {% trans "Find your doctor" %}
+      </h1>
+
+      <p class="efa__search__lead">
+        {% if country_label %}
+          {% blocktrans with country_label=country_label_choice %}
+            How much money has your doctor received from the pharma industry <strong>in {{ country_label }}</strong> in 2015?
+          {% endblocktrans %}
         {% else %}
-          <a class="efa__home-link" href="{% url 'eurosfueraerzte:eurosfueraerzte-index' %}">
+          {% trans "How much money has your doctor received from the pharma industry last year?" %}
         {% endif %}
-          {{ project_title }}
-        </a>
+      </p>
 
-        <h1 class="efa__search__title">
-          {% trans "Find your doctor" %}
-        </h1>
+      <div class="input-group">
+        {{ recipient_form.q }}
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="submit">{% trans "Search" %}</button>
+        </span>
+      </div>
 
-        <p class="efa__search__lead">
-          {% if country_label %}
-            {% blocktrans with country_label=country_label %}
-              How much money has your doctor received from the pharma industry <strong>in {{ country_label }}</strong> in 2015?
-            {% endblocktrans %}
-          {% else %}
-            {% trans "How much money has your doctor received from the pharma industry last year?" %}
-          {% endif %}
-        </p>
+      <input type="hidden" name="country" value="{{ country }}"/>
 
-        <div class="input-group">
-          {{ recipient_form.q }}
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="submit">{% trans "Search" %}</button>
-          </span>
-        </div>
-
-        <input type="hidden" name="country" value="{{ country }}"/>
-
-        <div class="efa__search__examples">
-          {% trans "Examples:" %}
-          {% include includes.search_examples %}
-        </div>
+      <div class="efa__search__examples">
+        {% trans "Examples:" %}
+        {% include includes.search_examples %}
+      </div>
     </form>
   </div>
 </section>
